# nanoARB

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  colab_training.py  rustfmt.toml
.github/workflows/: ci.yml  release.yml
crates/nano-backtest/: Cargo.toml
crates/nano-backtest/benches/: backtest.rs
crates/nano-backtest/src/: config.rs  engine.rs  events.rs  execution.rs  latency.rs  lib.rs  metrics.rs  position.rs  risk.rs  validation.rs
crates/nano-core/: Cargo.toml
crates/nano-core/benches/: types.rs
crates/nano-core/src/: constants.rs  error.rs  lib.rs  traits.rs
crates/nano-core/src/types/: instrument.rs  mod.rs  order.rs  price.rs  quantity.rs  side.rs  timestamp.rs
crates/nano-feed/: Cargo.toml
crates/nano-feed/benches/: parser.rs
crates/nano-feed/src/: error.rs  lib.rs  messages.rs  parser.rs  reader.rs  synthetic.rs
crates/nano-gateway/: Cargo.toml
crates/nano-gateway/src/: config.rs  lib.rs  main.rs  metrics.rs  server.rs
crates/nano-lob/: Cargo.toml
crates/nano-lob/benches/: features.rs  orderbook.rs
crates/nano-lob/src/: features.rs  lib.rs  orderbook.rs  snapshot.rs
crates/nano-model/: Cargo.toml
crates/nano-model/benches/: inference.rs
crates/nano-model/src/: inference.rs  lib.rs  preprocessing.rs  signal.rs
crates/nano-strategy/: Cargo.toml
crates/nano-strategy/src/: base.rs  lib.rs  market_maker.rs  rl_env.rs  signals.rs
docker/: Dockerfile  config.toml  docker-compose-monitoring.yml  docker-compose.yml  prometheus.yml
grafana/dashboards/: main.json
grafana/provisioning/dashboards/: dashboards.yml
models/: model.onnx.data
python/training/: config.py  requirements.txt  train.py
python/training/models/: __init__.py  decision_transformer.py  mamba_lob.py
