[package]
name = "nano-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Order management and execution gateway"

[dependencies]
nano-core = { path = "../nano-core" }
nano-feed = { path = "../nano-feed" }
nano-lob = { path = "../nano-lob" }
nano-strategy = { path = "../nano-strategy" }
nano-backtest = { path = "../nano-backtest" }

thiserror.workspace = true
anyhow.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
crossbeam-channel.workspace = true
dashmap.workspace = true
parking_lot.workspace = true

prometheus-client.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

config.workspace = true
toml.workspace = true
clap.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile = "3.9"

[[bin]]
name = "nanoarb"
path = "src/main.rs"

